<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/mag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mag"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"/>

    <TextView
        android:id="@+id/place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place"
        android:layout_below="@id/mag"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:layout_marginTop="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"/>

    <TextView
        android:id="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url"
        android:layout_below="@id/place"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>